fix(Activity list): change cursor to pointer on visibility form hover

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -3616,6 +3616,7 @@ a.disabled {
 .formThumbnail,
 .formIconWrap {
   display: inline-block;
+  cursor: pointer;
 }
 .formThumbnail:before,
 .formIconWrap:before,
